components/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: registry-1.docker.io/bitnami/nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /opt/bitnami/nginx/html/index.html
          subPath: index.html
        - name: css
          mountPath: /opt/bitnami/nginx/html/style.css
          subPath: style.css
      volumes:
      - name: html
        configMap:
          name: nginx-html
      - name: css
        configMap:
          name: nginx-css
